# InfiniTime

./: .gitmodules  CMakeLists.txt
.github/workflows/: lv_sim.yml
lv_sim/: CMakeLists.txt  lv_conf.h  main.cpp
lv_sim/sim/: FreeRTOS.h  portmacro_cmsis.h  task.h  tasks.cpp
lv_sim/sim/components/battery/: BatteryController.cpp
lv_sim/sim/components/ble/: NimbleController.cpp  NimbleController.h
lv_sim/sim/components/fs/: FS.cpp  FS.h
lv_sim/sim/components/heartrate/: HeartRateController.cpp  HeartRateController.h
lv_sim/sim/components/motion/: MotionController.cpp  MotionController.h
lv_sim/sim/components/motor/: MotorController.cpp
lv_sim/sim/displayapp/: DisplayApp.cpp  DisplayApp.h  LittleVgl.cpp  LittleVgl.h
lv_sim/sim/drivers/: Bma421.cpp  Bma421.h
lv_sim/sim/libraries/log/: nrf_log.h
lv_sim/sim/systemtask/: SystemTask.cpp  SystemTask.h
src/: CMakeLists.txt  main.cpp
src/components/fs/: FS.cpp  FS.h
src/components/gfx/: Gfx.cpp
src/displayapp/: Apps.h  Colors.cpp  DisplayApp.cpp  DisplayApp.h  DisplayAppRecovery.cpp  DummyLittleVgl.h  LittleVgl.cpp  LittleVgl.h  lv_pinetime_theme.c
src/displayapp/fonts/: README.md  jetbrains_mono_bold_20.c
src/displayapp/screens/: Alarm.cpp  Alarm.h  ApplicationList.h  BatteryInfo.cpp  BatteryInfo.h  Brightness.cpp  Brightness.h  Clock.h  DropDownDemo.cpp  Error.cpp  Error.h  FirmwareUpdate.cpp  FirmwareUpdate.h  FirmwareValidation.cpp  FirmwareValidation.h  FlashLight.cpp  FlashLight.h  HeartRate.cpp  HeartRate.h  InfiniPaint.cpp  InfiniPaint.h  Label.cpp  Label.h  List.cpp  List.h  Meter.cpp  Meter.h  Metronome.cpp  Metronome.h  Motion.cpp  Motion.h  Music.cpp  Music.h  Navigation.cpp  Navigation.h  Notifications.cpp  Notifications.h  Paddle.cpp  Paddle.h  PassKey.cpp  (+22 more)
src/displayapp/screens/settings/: QuickSettings.cpp  QuickSettings.h  SettingDisplay.cpp  SettingDisplay.h  SettingPineTimeStyle.cpp  SettingSetDate.cpp  SettingSetTime.cpp  SettingSteps.cpp  SettingTimeFormat.cpp  SettingTimeFormat.h  SettingWakeUp.cpp  SettingWatchFace.cpp  SettingWatchFace.h  Settings.cpp
src/drivers/: Spi.cpp  Spi.h  SpiMaster.cpp  St7789.cpp
src/libs/: lv_conf.h
src/systemtask/: SystemMonitor.h
